[package]
name = "async-redis"
version = "0.1.0"
authors = ["KennyChen <KennyChen6324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version = "1.0.1", features = ["full"]}
bytes = "1.0.1"
mini-redis = "0.4.0"
err-derive = "0.3.0"
enum_dispatch = "0.3.5"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
anyhow = { version = "1.0" }
num_cpus = "1.13.0"
num-traits = "0.2.14"
clap = "2.33.3"
rand = "0.8.3"
rustc-hash = "*"
jemallocator = "0.3.2"

[http]
proxy = "127.0.0.1:7890"

[https]
proxy = "127.0.0.1:7890"  