[package]
name = "async-redis"
version = "0.5.0"
authors = ["KennyChen <KennyChen6324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
tokio={version = "1.3.0", features = ["full"]}
bytes = "1.0.1"
mini-redis = "0.4.0"
err-derive = "0.3.0"
enum_dispatch = "0.3.5"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"
anyhow = { version = "1.0" }
num_cpus = "1.13.0"
num-traits = "0.2.14"
clap = "2.33.3"
futures = "0.3.13"
rand = "0.8.3"
rustc-hash = "*"
quote = "*"
syn = {version = "*", features = ["full", "extra-traits"]}

[target.'cfg(target_os = "linux")'.dependencies]
# jemallocator = "0.3.2"
mimalloc = { version = "0.1.25", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# jemallocator = "0.3.2"
mimalloc = { version = "0.1.25", default-features = false }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
#codegen-units = 16
panic = 'abort'
incremental = false
rpath = false
